--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -9,7 +9,7 @@
     tools:layout_height="300dp">
 
     <ImageView
-        android:id="@+id/image_view"
+        android:id="@+id/imageview_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
@@ -27,12 +27,12 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:background="@drawable/gradient"
-        app:layout_constraintBottom_toBottomOf="@id/image_view"
-        app:layout_constraintEnd_toEndOf="@+id/image_view"
-        app:layout_constraintStart_toStartOf="@+id/image_view" />
+        app:layout_constraintBottom_toBottomOf="@id/imageview_item"
+        app:layout_constraintEnd_toEndOf="@+id/imageview_item"
+        app:layout_constraintStart_toStartOf="@+id/imageview_item" />
 
     <TextView
-        android:id="@+id/text_view_user_name"
+        android:id="@+id/textview_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -42,9 +42,9 @@
         android:paddingVertical="8dp"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="@id/image_view"
-        app:layout_constraintEnd_toEndOf="@+id/image_view"
-        app:layout_constraintStart_toStartOf="@+id/image_view"
+        app:layout_constraintBottom_toBottomOf="@id/imageview_item"
+        app:layout_constraintEnd_toEndOf="@+id/imageview_item"
+        app:layout_constraintStart_toStartOf="@+id/imageview_item"
         tools:text="username" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
